--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="moving_date_label">Moving Date</string>
     <string name="contents">Contents</string>
     <string name="leads_error">Unable to load leads, please, check your internet connection</string>
+    <string name="buy_free_lead">Buy Free Lead</string>
 </resources>
