--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="details">Details</string>
     <string name="general">General</string>
-    <string name="moving_date">Moving Date</string>
     <string name="volume_m3">Volume (m3)</string>
     <string name="volume_ft3">Volume (ft3)</string>
     <string name="assembly">Assembly</string>
@@ -35,4 +34,10 @@
     <string name="contents">Contents</string>
     <string name="leads_error">Unable to load leads, please, check your internet connection</string>
     <string name="buy_free_lead">Buy Free Lead</string>
+    <string name="moving_size">Moving Size</string>
+    <string name="moving_date">Moving Date</string>
+    <string name="cost">Cost</string>
+    <string name="from">From</string>
+    <string name="to">To</string>
+    <string name="time_left">Time Left</string>
 </resources>
