--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,5 @@
     <string name="from">From</string>
     <string name="to">To</string>
     <string name="time_left">Time Left</string>
+    <string name="waiting_for_network">Waiting for network...</string>
 </resources>
